# PasswordManageer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  serializer.py
.github/workflows/: dev.yml  main.yml
NeuroDrive/: apis.py  apps.py  permissions.py  signals.py  urls.py
NeuroDrive/migrations/: 0001_initial.py  0002_file_is_starred.py  0003_remove_file_file_file_s3_url_and_more.py  0004_file_metadata.py  0005_file_password.py  0006_alter_file_metadata.py  0007_alter_file_updated_at.py  0008_file_is_removed_metadata.py  0009_remove_file_is_removed_metadata_and_more.py
NeuroDrive/models/: __init__.py  directory.py  file.py  shared_access.py
NeuroDrive/serializers/: __init__.py  directory.py  file.py  fileAccess.py  file_access.py  file_upload_serializer.py  sharedAccess.py  shared_access.py
NeuroDrive/views/: __init__.py  directory.py  file.py
NeuroMail/: admin.py  apis.py  apps.py  permissions.py  signals.py  threads.py  urls.py
NeuroMail/admin/: __init__.py  email.py
NeuroMail/fixtures/: email_ai_template.json  email_extensions.json
NeuroMail/migrations/: 0001_initial.py  0002_alter_email_body_alter_email_subject.py  0002_emailaitemplate.py  0003_remove_emailattachment_file.py  0004_emailattachment_s3_url.py
NeuroMail/models/: __init__.py  email.py  email_ai_template.py  email_attachment.py  email_box.py  email_box_recipient.py  email_extension.py  email_recipient.py  mailbox.py  mailbox_recipient.py
NeuroMail/serializers/: __init__.py  email.py  email_ai_template.py  email_attachment.py  (+9 more)
NeuroRsa/: apis.py  apps.py  urls.py
PasswordManager/: apis.py  urls.py
api/: admin.py  rsa_urls.py  urls.py
common/: contants.py
main/: admin.py  apps.py  customclient.py  hosts.py  pagination.py  settings.py  signals.py  urls.py
(+162 files in other folders)
