[tool.poetry]
name = "passwordmanagerbackend"
version = "0.1.0"
description = "SecurePass is a robust application for generating and managing passwords for various user accounts. Enjoy flexible security with both stateful and stateless password functionalities. Store passwords securely in our encrypted database or generate passwords without storing them on our servers."
authors = ["abdullahzulfiqar653 <abdullahzulfiqar653@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
